--- a/TOTP/JavaScript-Web/index.html
+++ b/TOTP/JavaScript-Web/index.html
@@ -10,31 +10,36 @@
 
     <h1>TOTP Generator</h1>
 
+    <label for="startupTests">Startup Tests: </label><div id="testResults" style="display: inline-block">?</div><br><br>
+
     <form id="totpForm">
 
-        <label for="sharedSecret">Shared Secret:</label>
+        <label for="timestamp">Timestamp: </label>
+        <input type="datetime-local" id="timestamp" name="timestamp" step="1"><br><br>
+
+        <label for="sharedSecret">Shared Secret: </label>
         <input type="text" id="sharedSecret" name="sharedSecret" required><br><br>
 
-        <label for="validityTime">Validity Time (seconds):</label>
+        <label for="validityTime">Validity Time (seconds, optional): </label>
         <input type="number" id="validityTime" name="validityTime" value="30"><br><br>
 
-        <label for="totpLength">TOTP Length:</label>
+        <label for="totpLength">TOTP Length (optional): </label>
         <input type="number" id="totpLength" name="totpLength" value="12"><br><br>
 
-        <label for="alphabet">Alphabet:</label>
+        <label for="alphabet">Alphabet (optional): </label>
         <input type="text" id="alphabet" name="alphabet" value="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"><br><br>
-
-        <label for="timestamp">Timestamp (optional, milliseconds):</label>
-        <input type="number" id="timestamp" name="timestamp"><br><br>
 
         <button type="submit">Generate TOTP</button>
 
     </form>
 
-    <h2>Generated TOTP</h2>
+    <br>
+
+    <h2>Results:</h2>
     <pre id="totpResult"></pre>
 
     <script type="text/javascript" src="./crypto-js.min.js"></script>
+    <script type="text/javascript" src="QRCodeSVG/qrcode.min.js"></script>
     <script type="module"          src="./script.js"></script>
 
 </body>
